fixed overflow on modal and changed close button to a button.

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -71,6 +71,10 @@ a,
 form {
   width: 100%;
   margin-bottom: 25px;
+
+  > :last-child {
+    margin-bottom: 0;
+  }
 }
 
 input {
@@ -79,7 +83,7 @@ input {
   background: $inputBgColor;
   color: $inputFontColor;
   border: $inputBorder;
-  border-radius: 3px;
+  border-radius: 5px;
   width: 100%;
 }
 
@@ -151,6 +155,7 @@ select {
 
 .button {
   border: 0;
+  border-radius: 3px;
   padding: 10px;
   font-size: inherit;
   margin-bottom: 10px;
